# xv6

./: CMakeLists.txt  Makefile  README  main.cpp
kernel/: defs.h  exec.c  fs.c  fs.h  kalloc.c  memlayout.h  proc.c  proc.h  riscv.h  syscall.c  sysfile.c  sysproc.c  trap.c  vm.c
mkfs/: mkfs.c
notxv6/: barrier.c  ph.c
user/: alarmtest.c  bttest.c  call.c  cowtest.c  find.c  grind.c  lazytests.c  pgtbltest.c  pingpong.c  primes.c  printf.c  sleep.c  symlinktest.c  sysinfotest.c  trace.c  ulib.c  usertests.c  uthread.c  uthread_switch.S  xargs.c
